<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/modeText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Green"
        android:gravity="center"
        android:height="30dip"
        android:text="@string/app_name"
        android:textColor="@color/White" >
    </TextView>

    <TableLayout
        android:id="@+id/colorSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modeText"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/first"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/second"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/third"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/tolerance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black" />
        </TableRow>

        <TableRow>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1" />
        </TableRow>

        <TableRow>

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="2" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/colorResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colorSelection"
        android:layout_gravity="center_horizontal"
        android:gravity="center" >

        <TableRow
            android:id="@+id/colorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/resistor" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/colorImage"
            android:layout_alignRight="@+id/colorImage"
            android:layout_below="@+id/colorImage"
            android:gravity="center"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/toleranceText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/resultText"
            android:layout_alignRight="@+id/resultText"
            android:layout_below="@+id/resultText"
            android:gravity="center"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/minmaxText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/toleranceText"
            android:layout_alignRight="@+id/toleranceText"
            android:layout_below="@+id/toleranceText"
            android:gravity="center"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />
    </RelativeLayout>

</RelativeLayout>